objects/ndd__Dictionary__c.object
<CustomObject>
    <description>This object contains the data dictionary records for the objects within the system</description>
    <fields>
        <fullName>ndd__API_Name__c</fullName>
        <description>Holds the field&apos;s internal API Name</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Holds the field&apos;s internal API Name</inlineHelpText>
        <label>API Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ndd__Created_By_Name__c</fullName>
        <description>Name of the person that created the field</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Name of the person that created the field</inlineHelpText>
        <label>Created By Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ndd__Created_Date__c</fullName>
        <description>Date/Time when the field was created</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date/Time when the field was created</inlineHelpText>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ndd__Description__c</fullName>
        <description>Holds the field description</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Holds the field description</inlineHelpText>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ndd__Information_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to checked if data was successfully retrieved (used for reporting)</description>
        <inlineHelpText>Set to checked if data was successfully retrieved</inlineHelpText>
        <label>Information Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ndd__Inline_Help_Text__c</fullName>
        <description>Contains the inline help text of the field</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Contains the inline help text of the field</inlineHelpText>
        <label>Inline Help Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ndd__IsCustom__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reflects if the field is a custom field (checked) or a standard field (unchecked)</description>
        <inlineHelpText>Reflects if the field is a custom field (checked) or a standard field (unchecked)</inlineHelpText>
        <label>IsCustom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ndd__Label__c</fullName>
        <description>Holds the field&apos;s default label</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The default label for the field</inlineHelpText>
        <label>Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ndd__Length__c</fullName>
        <description>Holds the field&apos;s length</description>
        <inlineHelpText>Holds the field&apos;s length</inlineHelpText>
        <label>Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ndd__Object_API_Name__c</fullName>
        <description>API Name of the object</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>API Name of the object</inlineHelpText>
        <label>Object API Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ndd__Object_Name__c</fullName>
        <description>Name of the object</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Name of the object</inlineHelpText>
        <label>Object Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ndd__Package_Namespace_Prefix__c</fullName>
        <description>Holds the package namespace prefix</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Holds the package namespace prefix</inlineHelpText>
        <label>Package Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ndd__Precision__c</fullName>
        <description>Holds the field&apos;s precision</description>
        <inlineHelpText>Holds the field&apos;s precision</inlineHelpText>
        <label>Precision</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ndd__Scale__c</fullName>
        <description>Holds the field&apos;s scale</description>
        <inlineHelpText>Holds the field&apos;s scale</inlineHelpText>
        <label>Scale</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ndd__Type_Description__c</fullName>
        <description>Holds the compound type description of the field</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Holds the compound type description of the field</inlineHelpText>
        <label>Type Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ndd__Type__c</fullName>
        <description>Holds the field&apos;s type</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Holds the field&apos;s type</inlineHelpText>
        <label>Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ndd__Value__c</fullName>
        <description>Column to hold picklist values or formula value if appropriate</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Column to hold picklist values or formula value if appropriate</inlineHelpText>
        <label>Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Dictionary</label>
    <listViews>
        <fullName>ndd__All</fullName>
        <columns>NAME</columns>
        <columns>ndd__Package_Namespace_Prefix__c</columns>
        <columns>ndd__Object_Name__c</columns>
        <columns>ndd__Object_API_Name__c</columns>
        <columns>ndd__Label__c</columns>
        <columns>ndd__API_Name__c</columns>
        <columns>ndd__Type_Description__c</columns>
        <columns>ndd__Description__c</columns>
        <columns>ndd__Inline_Help_Text__c</columns>
        <columns>ndd__Value__c</columns>
        <columns>ndd__Created_By_Name__c</columns>
        <columns>ndd__Created_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>dct-{00000000}</displayFormat>
        <label>Dictionary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dictionaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>